--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "php": ">=5.3.3",
         "zendframework/zendframework": "2.*",
         "doctrine/common": ">=2.1",
-        "doctrine/orm": ">=2.1"
+        "doctrine/orm": ">=2.1",
     },
     "require-dev": {
-    	"phpunit/phpunit" : "3.7.*"
+    	"phpunit/phpunit" : "3.7.*",
+        "doctrine/doctrine-module": "0.9.*@dev",
+        "doctrine/doctrine-orm-module": "0.9.*@dev"
     }
 }
